--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "build": "CI=false react-scripts build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test",
     "build:css": "tailwindcss -i ./src/index.css -o ./src/tailwind-output.css --watch",
     "eject": "react-scripts eject"
